	gtk package only so far. Also move some defines from Makefile.am to
	configure.ac as requested by a FIXME comment.

	* mk/chsDepend.in: add extra check to the chsDepend script (disabled).
	Dare anyone to enable it and watch the build break! We still have some
	issues with the NAME make var being set incorrectly. I have a plan to
	replace the cunning NAME hack with a different hack.

2005-01-12 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, gtk/Graphics/UI/Gtk/Pango/Rendering.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp: Renames both files from
	.chs to .chs.pp and changed the Makefile accordingly. Preprocessing
	is now necessary to accommodate the lack of some enum names in
	Gtk 2.2.

	* tools/hierarchyGen/hierarchy.list: Only create the FileChooser
	interface object when building for Gtk 2.4 or higher.

2005-01-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/hello/World.hs: update to work with the new module names.

	* demo/hello/Makefile: a simple makefile. The old makefile relied on
	the old build system. This makefile will not build in-place it
	requires everything to be installed.

	* tools/apiGen/ApiGen.hs, tools/apiGen/format-docs.xsl,
	tools/apiGen/gen-all.sh, tools/apiGen/Template.chs: add support for
	documentation of function arguments. It's mostly and improvement I
	think though it does add a lot of extra stuff to the final
	documentation. On the other hand the gtk documentation for functions
	often refer to argument names so the generated haddoc docs make more
	sense now.

2005-01-11 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/glib.pkg.in, gtk/gtk.pkg.in, mogul/mogul.pkg.in,
	glade/glade.pkg.in, gconf/gconf.pkg.in, sourceview/sourceview.pkg.in,
	mozembed/mozembed.pkg.in: correct import_dirs. Each module has its own
	directory under the hi difrectory. Also, since all packages now use
	the hierachrical module namespace we can install all packages as 'Auto'
	packages which means that users do not have to specify -package to ghc